<resources>
    <string name="app_name">Aprender</string>
    <string name="musica">Música</string>
    <string name="animal">Animales</string>
    <string name="frutas">Frutas</string>
    <string name="tiempo">Tiempo</string>
    <string name="colores">Colores</string>
    <string name="letras">Letras</string>
    <string name="numeros">Números</string>
    <string name="n">N</string>
    <string name="u">Ú</string>
    <string name="m">M</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="o">O</string>
    <string name="s">S</string>
    <string name="title_activity_animales">Animales</string>
    <string name="action_settings">Settings</string>


</resources>
